q~time 엘리먼트 컨텐츠 적용

--- a/assets/guide.html
+++ b/assets/guide.html
@@ -78,14 +78,14 @@
 			.indent {margin-left:25px;} (모바일에서 8px)
 		</p>
 
-		<div class="uk_note mt_l">
+		<blockquote class="uk_note mt_l" role="note">
 			<h3 class="sound_only">요약 설명</h3>
 			<p>HTML은 Tim Berners-Lee, Robert Cailliau 및 1989 년 부터 시작된 사람들에 의해 처음 만들어졌습니다.</p>
 			<p>HTML 은 프로그래밍 언어가 아닙니다. 콘텐츠의 구조를 정의하는 마크업 언어입니다.</p>
 			<p>HTML은 콘텐츠의 서로 다른 부분들을 씌우거나(wrap) 감싸서(enclose) 다른 형식으로 보이게하거나 특정한 방식으로 동작하도록 하는 일련의 요소(elements)로 이루어져 있습니다.</p>
 			<p>tags로 감싸는 것으로 단어나 이미지를 다른 어딘가로 하이퍼링크(hyperlink)하거나 단어들을 이탤릭체로 표시하고 글씨체를 크게 또는 작게 만드는 등의 일을 할 수 있습니다.</p>
 			<p>마크 업 언어는 컴퓨터가 텍스트를 처리하고 표시되는 방법을 제어하기 위해 서로 말을하는 방법입니다. 이를 위해 HTML은 tags와 attributes 라는 두 가지를 사용 합니다.</p>
-		</div>
+		</blockquote>
 		<!-- uk_note -->
 
 		<div class="ol_lst mt_l">
@@ -152,9 +152,9 @@
 		<article class="reference_box mt_l">
 			<h2 class="tit">참조</h2>
 			<ul class="link_lst">
-				<li class="reference"><a href="https://www.w3.org/TR/html52/document-metadata.html" target="_blank" class="fas">W3C 문서</a></li>
-				<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element" target="_blank" class="fas">MDN 문서</a></li>
-				<li class="reference"><a href="https://www.w3.org/TR/html51/dom.html#global-attributes" target="_blank" class="fas">W3C 전역속성</a></li>
+				<li class="reference"><a href="https://www.w3.org/TR/html52/document-metadata.html" target="_blank" class="fas" title="새창열림">W3C 문서</a></li>
+				<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element" target="_blank" class="fas" title="새창열림">MDN 문서</a></li>
+				<li class="reference"><a href="https://www.w3.org/TR/html51/dom.html#global-attributes" target="_blank" class="fas" title="새창열림">W3C 전역속성</a></li>
 			</ul>
 		</article>
 	</div>
