--- a/assets/01-html/05-textLevel/13-q_element.html
+++ b/assets/01-html/05-textLevel/13-q_element.html
@@ -22,7 +22,7 @@
 		</div>
 		<ol class="indent mt_m">
 			<li>
-				cite 속성 - <code>&lt;q cite=&quot;https://www.w3.org/TR/html52/textlevel-semantics.html#the-q-element&quot;&gt;</code>
+				cite 속성 - &lt;q cite=&quot;https://www.w3.org/TR/html52/textlevel-semantics.html#the-q-element&quot;&gt;
 				<div class="line_code">
 					<p>이 속성의 값은 인용된 정보의 원본 문서나 메세지를 가리키는 URL를 나타냅니다.</p>
 				</div>
