UXKM CSS calc 내용 추가

--- a/ukncs/uxkm-css.html
+++ b/ukncs/uxkm-css.html
@@ -10580,6 +10580,8 @@ background: repeating-radial-gradient(red, white 10%, blue 20%);
 					<h4 id="css3-calc">calc</h4>
 					<section>
 						<p>CSS Values and Units Module Level 3</p>
+						<p>calc() CSS 함수를 사용하면 CSS 속성의 값으로 계산식을 지정할 수 있습니다.</p>
+						<p>&lt;length&gt;, &lt;frequency&gt;, &lt;angle&gt;, &lt;time&gt;, &lt;percentage&gt;, &lt;number&gt;, 또는 &lt;integer&gt;를 받는 속성의 값으로 사용할 수 있습니다.</p>
 <pre><code>
 section {
 	float: left;
@@ -23579,7 +23581,7 @@ columns: unset;
 
 			</section>
 			<!-- //.uksection -->
-
+											
 			<hr title="Separator for Contents">
 
 			<h2 id="css-uiux">UI/UX 구현</h2>
