- 문자 컨텐츠 완료 - 내장 컨텐츠 진행 중

--- a/assets/01-html/05-textLevel/18-time_element.html
+++ b/assets/01-html/05-textLevel/18-time_element.html
@@ -15,7 +15,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;time&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			Internet Explorer : No support(지원하지 않음)
+			<mark>Internet Explorer : No support(지원하지 않음)</mark>
 		</p>
 		<ol class="indent mt_m">
 			<li>
