UXKM 이미지 경로 수정

--- a/ukncs/uxkm-html.html
+++ b/ukncs/uxkm-html.html
@@ -10627,7 +10627,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 						<strong>Web Browser Support for fieldset</strong>
 						<ul>
 							<li><img src="images/icon/ico_ie-false.png" alt="IE Browser"><em>지원 안 함</em></li>
-							<li><img src="images/icon/ico_edge-false.png.png" alt="Edge Browser"><em>지원 안 함</em></li>
+							<li><img src="images/icon/ico_edge-false.png" alt="Edge Browser"><em>지원 안 함</em></li>
 							<li><img src="images/icon/ico_chrome-true.png" alt="Chrome Browser"><em>12.0</em></li>
 							<li><img src="images/icon/ico_firefox-true.png" alt="Firefox Browser"><em>49.0</em></li>
 							<li><img src="images/icon/ico_opera-true.png" alt="Opera Browser"><em>15.0</em></li>
