--- a/ukncs/uxkm-html.html
+++ b/ukncs/uxkm-html.html
@@ -10641,7 +10641,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 							<a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element/details" target="_blank" title="새 창 열림">MDN details specification</a>
 						</dd>
 					</dl>
-				</article>1002-334-559478
+				</article>
 
 				<dl class="linkdoc">
 					<dt>참조</dt>
