UXKM HTML 내용추가 보완

--- a/ukncs/uxkm-html.html
+++ b/ukncs/uxkm-html.html
@@ -10593,7 +10593,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 						</dd>
 					</dl>
 <pre><code>
-<!-- 기본예제 -->
+&lt;!-- 기본예제 --&gt;
 &lt;details&gt;
   &lt;p&gt;Requires a computer running an operating system. The computer
   must have some memory and ideally some kind of long-term storage.
@@ -10603,7 +10603,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 </code></pre>
 
 <pre><code>
-<!-- 요약 제공 예제 -->
+&lt;!-- 요약 제공 예제 --&gt;
 &lt;details&gt;
   &lt;summary&gt;System Requirements&lt;/summary&gt;
   &lt;p&gt;Requires a computer running an operating system. The computer
@@ -10614,7 +10614,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 </code></pre>
 
 <pre><code>
-<!-- 열려 있는 상태 예제 -->
+&lt;!-- 열려 있는 상태 예제 --&gt;
 &lt;details open&gt;
   &lt;summary&gt;System Requirements&lt;/summary&gt;
   &lt;p&gt;Requires a computer running an operating system. The computer
