- 컨텐츠 부분 수정 및 내장 컨텐츠 작업 중

--- a/assets/01-html/04-grouping/02-p_element.html
+++ b/assets/01-html/04-grouping/02-p_element.html
@@ -27,7 +27,7 @@
 			HTML에서는 <code>&lt;p&gt;</code>태그를 이용하여 이러한 단락을 표현합니다.<br>
 			브라우저 기본 스타일은 문단끼리 한 줄의 간격으로 분리합니다. 첫 줄 들여쓰기 등 다른 구분 방법은 CSS를 통해 사용할 수 있습니다.
 		</p>
-		<ol class="indent">
+		<ol class="indent mt_s">
 			<li>콘텐츠를 문단으로 나누면 페이지의 접근성을 높입니다.</li>
 			<li>스크린 리더 등 보조 기술은 다음 문단으로 넘어갈 수 있는 단축키 등을 제공하므로, 시각적 매체의 여백이 사용자의 빠른 콘텐츠 탐색을 돕는 것과 같은 효과를 얻을 수 있습니다.</li>
 			<li>빈 <code>&lt;p&gt;</code> 요소를 사용해 두 문단에 여백을 추가하는건 스크린 리더 사용자에게 부정적인 경험을 줄 수 있습니다.</li>
