--- a/assets/01-html/04-grouping/03-ol_element.html
+++ b/assets/01-html/04-grouping/03-ol_element.html
@@ -19,7 +19,7 @@
 
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[reversed] <span class="t_blue">&lt;ol reversed&gt;</span></h3>
-			<p class="mt_sm">항목이 역순으로 지정되도록 지정합니다. html5에서 새로 생성됨.</p>
+			<p class="mt_s">항목이 역순으로 지정되도록 지정합니다. html5에서 새로 생성됨.</p>
 			<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.3.ol_element/4.3.ol_element1.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
@@ -39,7 +39,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[start] <span class="t_blue">&lt;start=&quot;항목의 시작 값&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				목록 항목의 시작 값을 지정합니다.<br>
 				목록 요소의 순서 유형이 XXXI 또는 문자와 같은 로마 숫자 일 수도 있지만 start 값은 항상 숫자로 표시됩니다.<br>
 				3번부터 번호를 시작하려면 <code>&lt;ol start=&quot;3&quot;&gt;</code> 와 같이 사용할 수 있습니다.<br>
@@ -54,8 +54,8 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;ol type=&quot;1 | a | A | i | I&quot;&gt;</span></h3>
-			<p class="mt_sm">
-				목록 마커의 종류.<br>
+			<p class="mt_s">
+				목록 항목의 마커의 종류.<br>
 				<code>&lt;li&gt;</code>요소 내에서 다른 속성을 사용 하지 않으면 유형 목록이 전체 목록에 사용됩니다.<br>
 				이 속성은 HTML4에서 더 이상 사용되지 않지만 HTML5에서 다시 도입되었습니다.
 			</p>
