--- a/assets/01-html/04-grouping/05-li_element.html
+++ b/assets/01-html/04-grouping/05-li_element.html
@@ -22,7 +22,7 @@
 
 		<article class="txt_ex indent mt_m">
 			<h3>[value] <span class="t_blue">&lt;li value="숫자"&gt;</span></h3>
-			<p class="indent mt_sm">
+			<p class="indent mt_s">
 				의미로는 항목의 순서를 설정, 값은 숫자(Number)로 표시, 특징은 이하 항목들의 순서가 다시 지정됨.<br>
 				이 정수 속성은 <code>&lt;ol&gt;</code> 요소 내부의 항목의 현재 서수 값을 나타냅니다.<br>
 				리스트가 로마 숫자나 문자로 표시되더라도 이 속성에는 숫자만 넣을수 있습니다.<br>
