--- a/assets/01-html/04-grouping/13-blockquote_element.html
+++ b/assets/01-html/04-grouping/13-blockquote_element.html
@@ -18,7 +18,7 @@
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[cite] <span class="t_blue">&lt;blockquote cite="URL"&gt;</span></h3>
 
-			<p class="mt_sm">URL은 인용된 정보에 대한 원본 문서 또는 메시지를 나타냅니다. 이 속성은 인용문의 컨텍스트나 참조를 설명하는 정보입니다.</p>
+			<p class="mt_s">URL은 인용된 정보에 대한 원본 문서 또는 메시지를 나타냅니다. 이 속성은 인용문의 컨텍스트나 참조를 설명하는 정보입니다.</p>
 		</article>
 	</section>
 
