--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -39,7 +39,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;a&gt;</code> 요소의 href(Hyper text REFerence) 속성은 링크된 페이지의 URL을 명시합니다. URL은 HTTP 기반 문서 외에서도 쓰입니다. URL은 브라우저가 지원하는 어떠한 프로토콜에도 사용할 수도 있습니다. 예로, 사용자 환경에서는 file, ftp, 그리고 mailto 링크가 많이 사용됩니다.
 			</p>
 		</article>
@@ -47,7 +47,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[rel] <span class="t_blue">&lt;a href=&quot;URL 주소&quot; rel=&quot;속성값&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;a&gt;</code> 요소의 rel(relationship) 속성은 현재 문서와 링크된 문서 사이의 연관 관계(relationship)를 명시합니다.<br>
 				여러 검색 엔진들은 링크에 대한 더 많은 정보를 수집하기 위해 이 속성을 사용할 수 있습니다.<br>
 				이 속성은 반드시 href 속성이 설정되어 있어야만 사용할 수 있습니다.
@@ -113,12 +113,12 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[hreflang] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
-			<div class="view_editor ex_code mt_sm" data-target="html/05-textLevel/5.1.a_element_hreflang.html">
+			<div class="view_editor ex_code mt_s" data-target="html/05-textLevel/5.1.a_element_hreflang.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;a&gt;</code> 요소의 hreflang 속성은 링크된 문서의 언어를 명시하지만, 단순히 참고 용도로만 사용됩니다.<br>
 				이 속성은 반드시 href 속성이 설정되어 있어야만 사용할 수 있습니다.
 			</p>
@@ -127,15 +127,15 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;a target=&quot;속성값&quot;&gt;</span></h3>
-			<div class="view_editor ex_code mt_sm" data-target="html/05-textLevel/5.1.a_element_target.html">
+			<div class="view_editor ex_code mt_s" data-target="html/05-textLevel/5.1.a_element_target.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;a&gt;</code> 요소의 target 속성은 링크한 URL을 어디에 표시할건지 지정합니다. 가능한 값은 브라우징 문맥, 즉 탭, 창, 또는 &lt;iframe&gt;의 이름 또는 키워드입니다. 다음 키워드는 특별한 뜻을 가지고 있습니다.
 			</p>
-			<div class="ol_lst indent mt_sm">
+			<div class="ol_lst indent mt_s">
 				<ol>
 					<li>_blank 속성 값 : URL을 새로운 브라우징 문맥에 표시합니다. 보통 새 탭이지만, 사용자가 브라우저 설정을 통해 새 창으로 바꿀 수 있습니다.</li>
 					<li>_self 속성 값 : URL을 현재 브라우징 문맥에 표시합니다. 기본값으로 생략 가능.</li>
@@ -148,12 +148,12 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;a type=&quot;속성값&quot;&gt;</span></h3>
-			<div class="view_editor ex_code mt_sm" data-target="html/05-textLevel/5.1.a_element_type.html">
+			<div class="view_editor ex_code mt_s" data-target="html/05-textLevel/5.1.a_element_type.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;a&gt;</code> 요소의 이 속성은 미디어 유형을 링크 대상에 대한 MIME 유형의 형태로 지정합니다. 일반적으로, 이것은 엄격히 자문 정보를 제공합니다.<br>
 				브라우저는 멀티미디어 유형에 작은 아이콘을 추가 할 수 있습니다. 예를 들어, 유형이 audio/wav로 설정된 경우 브라우저가 작은 스피커 아이콘을 추가 할 수 있습니다.<br>
 				MIME 형식의 전체 목록을 보려면
@@ -166,12 +166,12 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[rev] <span class="t_blue">&lt;a rev=&quot;속성값&quot;&gt;</span></h3>
-			<div class="view_editor ex_code mt_sm" data-target="html/05-textLevel/5.1.a_element_rev.html">
+			<div class="view_editor ex_code mt_s" data-target="html/05-textLevel/5.1.a_element_rev.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<p class="mt_sm">
+			<p class="mt_s">
 				rev(Reverse links)속성은 반드시 href 속성이 설정되어 있어야만 사용할 수 있습니다.
 			</p>
 		</article>
@@ -179,12 +179,12 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[download] <span class="t_blue">&lt;a download=&quot;속성값&quot;&gt;</span></h3>
-			<div class="view_editor ex_code mt_sm" data-target="html/05-textLevel/5.1.a_element_download.html">
+			<div class="view_editor ex_code mt_s" data-target="html/05-textLevel/5.1.a_element_download.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;a&gt;</code> 요소의 download 속성은 사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠가 다운로드됨을 명시합니다.<br>
 				이 속성의 속성값은 다운로드되는 파일의 이름이 되며, 그 값에 특별한 제약은 없습니다.<br>
 				브라우저는 다운로드되는 파일의 정확한 확장자명을 확인하여, 자동으로 파일 이름 끝에 추가합니다. (.html, .pdf, .jpg 등)<br>
