--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -21,12 +21,12 @@
 		</div>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_lm">
 		<h2>6.3.1. map 속성</h2>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;img name=&quot;이름&quot; id=&quot;name이름과 동일&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				필수 속성으로, 이미지맵의 이름을 명시함.
 			</p>
 		</article>
