--- a/assets/01-html/03-sections/04-nav_element.html
+++ b/assets/01-html/03-sections/04-nav_element.html
@@ -10,7 +10,7 @@
 		<p>
 			<code>&lt;nav&gt;</code> 요소는 현재 페이지 안 또는 다른 페이지로 가는 링크를 보여주는 페이지의 한 구조를 말합니다. 주로 태그 안에 메뉴, 목차, 색인 등이 들어갑니다.
 		</p>
-		<ol class="indent">
+		<ol class="indent mt_s">
 			<li>문서의 모든 링크가 <code>&lt;nav&gt;</code> 요소 안에 있을 필요는 없습니다.</li>
 			<li><code>&lt;nav&gt;</code> 요소는 주요 블록의 탐색 링크를 위해 사용됨.</li>
 			<li>문서는 여러개의 <code>&lt;nav&gt;</code> 태그를 소유할수 있습니다. 예를 들면, 하나는 사이트 탐색에, 다른 하나는 내부 페이지 탐색을 위해 사용할 수 있습니다.</li>
