--- a/assets/01-html/04-grouping/01-main_element.html
+++ b/assets/01-html/04-grouping/01-main_element.html
@@ -12,7 +12,7 @@
 			<code>&lt;main&gt;</code> 요소는 대부분의 인터넷 익스플로러 11 이하를 제외한 브라우저에서 지원합니다.<br>
 			따라서 &quot;main&quot; ARIA role 속성을 <code>&lt;main&gt;</code> 요소에 추가해 인터넷 익스플로러에서도 접근성을 확보하는 편이 좋습니다.
 		</p>
-		<ol class="indent">
+		<ol class="indent mt_s">
 			<li>
 				<code>&lt;main&gt;</code> 요소의 콘텐츠는 사이드바나, 내비게이션 링크, 저작권 정보, 사이트 로고,
 				(문서의 주요 기능이 검색 폼이 아닐 경우)검색 폼과 같은 모든 문서에 반복적으로 있는 어떠한 콘텐츠라도 제외되어야 하며 문서 안에 가장 유일한 요소여야 합니다.
