--- a/assets/01-html/05-textLevel/22-bdo_element.html
+++ b/assets/01-html/05-textLevel/22-bdo_element.html
@@ -18,7 +18,7 @@
 		<ol class="indent mt_m">
 			<li>
 				<mark>dir</mark> 속성 - &lt;bdo dir=&quot;(이 요소의 텍스트 방향)ltr | rtl | auto&quot;&gt;
-				<div class="line_code">
+				<div class="line_code mt_s">
 					<p><mark>ltr:</mark> 텍스트가 왼쪽에서 오른쪽 방향으로 이동해야 함을 나타냅니다. 필수 속성으로 반드시 명시해야 함.</p>
 					<p><mark>rtl:</mark> 텍스트가 오른쪽에서 왼쪽 방향으로 이동해야 함을 나타냅니다. 요소내에 위치한 텍스트의 방향성을 명시함.</p>
 					<p><mark>auto:</mark> 요소의 내용에 기초하여 브라우저가 방향을 결정합니다.</p>
