--- a/assets/01-html/06-embedded/01-iframe_element.html
+++ b/assets/01-html/06-embedded/01-iframe_element.html
@@ -25,12 +25,12 @@
 		</div>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_lm">
 		<h2>6.1.1. iframe 속성</h2>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;iframe src=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;iframe&gt;</code> 요소에 보일 문서의 URL를 명시합니다.(Address of the resource)
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.1.iframe_element_src.html">
@@ -42,7 +42,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[width & height] <span class="t_blue">&lt;iframe width=&quot;픽셀(200)&quot; height=&quot;픽셀(200)&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;iframe&gt;</code> 요소의 너비(Horizontal dimension)와 높이(Vertical dimension)를 픽셀(pixel) 단위로 명시합니다.<br>
 				HTML 4.01에서 <code>&lt;iframe&gt;</code> 요소의 width, height 속성값은 픽셀(pixel) 단위뿐만 아니라 퍼센트(%) 단위로도 정의할 수 있었습니다.<br>
 				하지만 HTML5에서는 오직 픽셀(pixel) 단위만을 사용해야 합니다.
@@ -56,7 +56,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;iframe name=&quot;이름&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;iframe&gt;</code> 요소의 이름을 명시합니다.(Name of nested browsing context)<br>
 				name 속성은 자바스크립트에서 해당 요소를 참조하기 위해 사용되거나, <code>&lt;a&gt;</code> 요소나 <code>&lt;form&gt;</code> 요소의 target 속성이나,
 				<code>&lt;input&gt;</code> 요소 또는 <code>&lt;button&gt;</code> 요소의 formtarget 속성의 속성값으로 사용될 수 있습니다.<br>
@@ -71,7 +71,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn html5">[srcdoc] <i class="fab fa-html5"></i> <span class="t_blue">&lt;iframe srcdoc=&quot;HTML 코드(요소에 보일 HTML 코드로 반드시 유효한 HTML 코드이어야 함.)&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;iframe&gt;</code> 요소에 보일 웹 페이지의 HTML 코드를 명시합니다.(A document to render in the iframe)<br>
 				만약 srcdoc 속성이 명시되어 있고 해당 브라우저가 srcdoc 속성을 지원하면, <code>&lt;iframe&gt;</code> 요소의 src 속성값은 srcdoc 속성값으로 재정의될 것입니다.<br>
 				하지만 srcdoc 속성이 명시되어 있지만 해당 브라우저가 srcdoc 속성을 지원하지 않으면, 브라우저는 src 속성에 명시된 파일을 <code>&lt;iframe&gt;</code> 요소에 보여줄 것입니다.<br>
@@ -97,11 +97,11 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[sandbox] <span class="t_blue">&lt;iframe sandbox=&quot;속성값&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;iframe&gt;</code> 요소에 보일 콘텐츠에 대한 추가적인 제한 사항(restrictions)들의 집합을 명시합니다.(Security rules for nested content)<br>
 				<code>&lt;iframe&gt;</code> 요소의 sandbox 속성은 HTML5에서 새롭게 추가된 속성입니다.
 			</p>
-			<ul class="dot_lst mt_sm">
+			<ul class="dot_lst mt_s">
 				<li>실제 존재하지 않는 도메인(오리진)에 속한 것으로 간주함. 따라서 자신이 소속된 도메인과도(allow-scripts에 의해 실행이 가능해져도) 통신할 수 없음.</li>
 				<li>플러그인 실행금지</li>
 				<li>자바스크립트 사용금지</li>
