--- a/assets/01-html/06-embedded/02-img_element.html
+++ b/assets/01-html/06-embedded/02-img_element.html
@@ -32,24 +32,24 @@
 		</div>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_lm">
 		<h2>6.2.1. img 속성</h2>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;img src=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				이 속성은 <code>&lt;img&gt;</code>요소에 필수입니다.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;img alt=&quot;이미지 대체 텍스트&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				이미지를 보여줄 수 없을 때 해당 이미지를 대체할 텍스트를 명시합니다.<br>
 				이러한 alt 속성은 사용자가 느린 네트워크 환경이나 src 속성값의 오류,
 				시각 장애인용 스크린 리더의 사용 등 어떤 이유로든 사용자가 이미지를 볼 수 없을 때 이미지 대신 제공할 대체 정보를 제공합니다.
 			</p>
-			<ol class="ol_lst mt_sm indent">
+			<ol class="ol_lst mt_s indent">
 				<li>만약 이미지가 정보를 포함하고 있다면, 텍스트는 이미지를 묘사해야 함.</li>
 				<li>만약 이미지가 <code>&lt;a&gt;</code> 요소 내에 위치하고 있다면, 텍스트는 링크가 어디와 연결되어 있는지를 설명해야 함.</li>
 				<li>만약 이미지가 단순한 장식이라면 <code>alt=&quot;&quot;</code>와 같이 사용해야 함.</li>
@@ -58,7 +58,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[width], [height]</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;img width=&quot;이미지의 너비를 픽셀(pixel) 단위로 명시함&quot; height=&quot;이미지의 높이를 픽셀(pixel) 단위로 명시함&quot;&gt;</code><br>
 				이미지의 height 속성과 width 속성은 언제나 명시하는 것이 좋습니다.<br>
 				이 속성들이 명시되어 있으면 웹 페이지가 로드될 때 브라우저가 해당 이미지를 위한 적절한 공간을 남겨둘 수 있지만,
@@ -73,12 +73,12 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[usemap] <span class="t_blue">&lt;img usemap=&quot;#맵이름&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;img&gt;</code> 요소의 usemap 속성은 클라이언트 사이드 이미지 맵(client-side image-map)으로 이미지를 명시합니다.<br>
 				usemap 속성은 <code>&lt;map&gt;</code> 요소의 name 속성과 결합하여, <code>&lt;img&gt;</code> 요소와 <code>&lt;map&gt;</code> 요소 사이의 관계를 생성합니다.<br>
 				만약 해당 <code>&lt;img&gt;</code> 요소가 <code>&lt;a&gt;</code>요소나 <code>&lt;button&gt;</code> 요소의 자손 요소(descendant element)이면 usemap 속성은 사용할 수 없습니다.
 			</p>
-			<ol class="ol_lst mt_sm indent">
+			<ol class="ol_lst mt_s indent">
 				<li>#맵이름 값 : 해시 문자(#)와 함께 사용할 <code>&lt;map&gt;</code> 요소의 name 속성값을 명시함.</li>
 			</ol>
 			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.2.img_element_usemap.html">
@@ -90,7 +90,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[ismap] <span class="t_blue">&lt;img ismap&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;img&gt;</code> 요소의 ismap 속성은 해당 이미지가 서버 사이드 이미지맵(server-side image map)의 일부인지 여부를 명시합니다.<br>
 				이 속성은 해당 <code>&lt;img&gt;</code> 요소가 유효한 href 속성값을 가지는 <code>&lt;a&gt;</code> 요소의 자손 요소인 경우에만 허용됩니다.<br>
 				ismap 속성은 불리언(boolean) 속성입니다.<br>
@@ -102,7 +102,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;img srcset=&quot;/images/img1.jpg 960w, /images/img2.jpg 575w&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				이브라우저에 제시할(사용할) 이미지들과 그 이미지들의 원본 크기를 지정합니다.<br>
 				다양한 상황 (예 : 고해상도 디스플레이, 소형 모니터 등)에서 사용할 이미지<br>
 				<code>&lt;img&gt;</code> 요소의 srcset 속성은 각각 다른 환경에서 사용될 이미지 소스를 명시합니다.<br>
@@ -110,7 +110,7 @@
 				각 이미지 소스를 나타내는 문자열은 다음과 같이 구성됩니다.<br>
 				<mark>Internet Explorer는 지원하지 않음.</mark>
 			</p>
-			<ol class="ol_lst indent mt_m">
+			<ol class="ol_lst indent mt_s">
 				<li class="line_code font14">
 					<strong>w 단위(Width descriptor)는 이미지의 원본 크기(가로 너비)를 의미합니다. 예를 들어 400x300(px) 크기 이미지의 w 값은 400w입니다.</strong>
 					<p>뷰포트 너비가 400px 이하일 때 small.png(400px)가 사용됩니다.</p>
@@ -138,14 +138,14 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[sizes] <span class="t_blue">&lt;img sizes=&quot;(min-width: 960px) 50vw, (min-width: 575px) 75vw, 100vw&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				미디어조건과 그 조건에 해당하는 이미지의 ‘최적화 출력 크기’를 지정합니다.<br>
 				<code>&lt;img&gt;</code> 요소의 sizes 속성은 서로 다른 페이지 레이아웃에 대한 이미지 소스의 크기를 명시합니다.<br>
 				sizes 속성은 이미지 소스의 크기를 나타내는 하나 이상의 문자열을 콤마(,)로 결합한 리스트를 속성값으로 가집니다.<br>
 				각 이미지 소스의 크기를 나타내는 문자열은 다음과 같이 구성됩니다.<br>
 				<mark>Internet Explorer는 지원하지 않음.</mark>
 			</p>
-			<ol class="ol_lst mt_sm indent">
+			<ol class="ol_lst mt_s indent">
 				<li>미디어 상태(마지막 아이템에서는 생략함).</li>
 				<li>이미지 소스의 크기값.</li>
 				<li>sizes와 width를 같이 작성할 경우 width가 우선합니다.</li>
@@ -162,10 +162,10 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[crossorigin] <span class="t_blue">&lt;img crossorigin=&quot;anonymous | use-credentials&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;canvas&gt;</code> 요소에 사용될 이미지에 교차 출처 접근(cross-origin access)을 허용하는 제3의 사이트(third-party site)로부터의 이미지 허용 여부를 명시함.
 			</p>
-			<ol class="ol_lst mt_sm indent">
+			<ol class="ol_lst mt_s indent">
 				<li>
 					anonymous 값 : 교차 출처 요청 (예 : Origin:HTTP 헤더 사용)이 수행되지만 자격 증명이 전송되지 않습니다.<br>
 					(예 : 쿠키, X.509 인증서 또는 HTTP 기본 인증 없음).<br>
@@ -183,7 +183,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[longdesc] <span class="t_blue">&lt;img longdesc=&quot;[html-longdesc]에 정의 된 이미지의 확장 된 설명에 대한 링크를 제공하는 URL&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				<code>&lt;img&gt;</code> 요소의 longdesc 속성은 이미지에 대한 alt속성의 섦명이 부족한 경우 longdesc 속성을 제공하여 부가적인 설명을 제공하는 URL을 명시합니다.<br>
 				현재는 접근성 관련하여 이 속성보다는 다른방법으로 대체하는 것을 권장합니다.
 			</p>
