--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -17,7 +17,7 @@
 		</div>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_lm">
 		<h2>6.4.1. area 속성</h2>
 
 		<article class="indent_max txt_ex mt_l">
@@ -34,7 +34,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[coords] <span class="t_blue">&lt;area coords=&quot;좌표&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				좌표값을 지정합니다. 이미지의 왼쪽 모서리를 기준으로 하이퍼링크 영역의 시작과 끝 부분을 지정합니다.<br>
 				이 coords속성값을 지정하기가 까다롭습니다. 그래서 이 부분은 텍스트 에디터에서 직접 코딩하지 않고 이미지맵을 생성하는 유틸리티를 사용하는 것이 좋습니다.<br>
 				이미지 맵은 링크에만 국한되지 않습니다. 이미지 맵 버튼을 클릭하면 프로그램이나 스크립트가 실행될 수도 있습니다.<br>
@@ -88,14 +88,14 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;area href=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				해당 영역(area)에 연결된 하이퍼링크의 대상 URL(target URL)을 명시함.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;area alt=&quot;대체 텍스트&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				영역(area)에 대한 대체 텍스트(alternate text)를 명시함.<br>
 				반드시 필수로 들어가야 하며, href 속성이 설정되어 있어야만 사용할 수 있음.
 			</p>
@@ -103,7 +103,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;area target=&quot;_blank | _parent | _self | _top | 프레임 이름&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				영역을 클릭했을 때 대상 URL의 문서가 열릴 위치를 명시함.
 			</p>
 			<ol class="ol_lst mt_sm indent">
@@ -116,21 +116,21 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[download] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area download=&quot;파일이름&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠가 다운로드됨을 명시함.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[media] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area media=&quot;미디어 쿼리&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				대상 URL이 최적화되는 미디어나 매체를 명시함.
 			</p>
 		</article>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[rel] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area rel=&quot;alternate | author | bookmark | help | license | next | nofollow | noreferrer | prefetch | prev | search | tag&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				현재 문서와 대상 URL 사이의 연관 관계를 명시함.<br>
 				href 속성을 포함하는 앵커의 경우이 속성은 대상 객체와 링크 객체의 관계를 지정합니다.
 				<span class="reference mt_l"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types" target="_blank" title="새창열림">링크 유형 값(참조)</a></span><br>
@@ -158,86 +158,3 @@
 			<li class="safari">지원</li>
 		</ul>
 	</aside>
-
-
-	<!--
-	<section class="txt_ex mt_lm">
-		<h2>6.1.2. iframe 속성 간단 요약</h2>
-		<div class="indent_max mt_l">
-			<h3 class="ml_mn">[기본 속성]</h3>
-			<p class="mt_sm">
-				<code>&lt;iframe name=&quot;test&quot; src=&quot;주소&quot; width=&quot;500&quot; height=&quot;100&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;</code>
-			</p>
-			<ul class="dot_lst mt_sm">
-				<li class="t_black">src : 아이프레임 홈페이지 url 주소</li>
-				<li class="t_black">width : 아이프레임 가로 넓이</li>
-				<li class="t_black">height: 아이프레임 세로 길이</li>
-				<li class="t_black">frameborder : 테두리 굵기 0이면 테두리 없음</li>
-				<li>
-					<p class="t_black">scrolling : 스크롤바 표시</p>
-					<div class="indent">
-						scrolling="no"는 스크롤바 없음<br>
-						scrolling="yes"는 무조건 스크롤바 표시<br>
-						scrolling="auto"는 스크롤바 자동표시
-					</div>
-				</li>
-				<li>
-					<p class="t_black">align : 정렬</p>
-					<div class="indent">
-						align="left" 왼쪽정렬<br>
-						align="right" 오른쪽정렬<br>
-						align="middle" 중앙정렬<br>
-						align="absmiddle" 줄중간정렬
-					</div>
-				</li>
-				<li class="t_black">name : 아이프레임 이름</li>
-			</ul>
-			<p class="mt_sm"><mark>align, frameborder, scrolling 속성은 html4만 지원되고 html5 는 지원이 안됨.</mark></p>
-		</div>
-
-		<div class="indent_max mt_l">
-			<h3 class="ml_mn">[html5부터 추가된 속성]</h3>
-			<p class="mt_sm">
-				srcdoc 속성 : 주소가 아니라 직접 태그소스를 <code>&lt;iframe&gt;</code>으로 표시할 수 있음<br>
-				<code>&lt;iframe srcdoc=&quot;&lt;p&gt;하이?&lt;/p&gt;&quot; &lt;/iframe&gt;</code> 이렇게 하면
-				입력한 태그가 <code>&lt;iframe&gt;</code>내에 표시됩니다.<br>
-				<mark>익스플로러는 지원 안함.</mark>
-			</p>
-		</div>
-
-		<div class="indent_max mt_l">
-			<h3 class="ml_mn">[sandbox 속성]</h3>
-			<p class="mt_sm">
-				보안을 위해서 <code>&lt;iframe&gt;</code>에서 <code>&lt;form&gt;</code>이나 <code>&lt;javascript&gt;</code> 같은 게 실행되지 못하게 함.
-				아이프레임으로 해킹을 많이하니까 생긴 속성
-			</p>
-			<ul class="dot_lst mt_sm">
-				<li>익스플로러10 부터 지원</li>
-				<li>allow-forms - 폼실행 허용</li>
-				<li>allow-same-origin 같은 도메인의 리소스 이용가능</li>
-				<li>allow-scripts 스크립트 실행 허용</li>
-				<li><code>&lt;iframe sandbox=&quot;&quot; src=&quot;주소&quot;&gt;&lt;/iframe&gt;</code></li>
-				<li><code>&lt;iframe sandbox=&quot;allow-scripts&quot; src=&quot;주소&quot;&gt;&lt;/iframe&gt;</code> 스크립트는 실행 가능해짐.</li>
-			</ul>
-		</div>
-
-		<div class="view_editor edit_code mt_l" data-target="html/06-embedded/6.1.iframe_element.html">
-			<h3 class="ve_tit">예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-
-		<aside class="browser_support mt_l" data-tit="iframe">
-			<ul>
-				<li class="ie">지원</li>
-				<li class="edge">지원</li>
-				<li class="chrome">1.0</li>
-				<li class="firefox">지원</li>
-				<li class="opera">지원</li>
-				<li class="safari">지원</li>
-			</ul>
-		</aside>
-	</section>
-	-->
-
