- 베타 버전 표시 추가

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 	<header class="uk_header">
 		<div class="inner">
-			<h1 class="hd_logo uk_logo"><a href="/" class="uk_link">UXKM</a></h1>
+			<h1 class="hd_logo uk_logo beta"><a href="/" class="uk_link">UXKM</a></h1>
 
 			<div class="hd_nav_area">
 				<nav class="nav">
