--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -30,27 +30,58 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[media] <span class="t_blue">&lt;source media="미디어 조건"&gt;</span></h3>
 			<p class="mt_s">
-				사용자 에이전트가 각 &lt;source&gt;요소 에 대해 평가할 미디어 조건 (미디어 쿼리와 유사)을 지정합니다.<br>
-				미디어 조건이 false되면 해당 &lt;source&gt;요소를 건너 뜁니다.
+				사용자 에이전트가 각 <code>&lt;source&gt;</code> 요소 에 대해 평가할 미디어 조건 (미디어 쿼리와 유사)을 지정합니다.<br>
+				미디어 조건이 false되면 해당 <code>&lt;source&gt;</code>요소를 건너 뜁니다.
 			</p>
+			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.8.picture_element_media.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+		</article>
+
+		<article class="indent_max txt_ex mt_l">
+			<h3 class="ml_mn">[type] <span class="t_blue">&lt;source type="MIME 유형(image/webp)"&gt;</span></h3>
+			<p class="mt_s">
+				요소 속성에서 리소스 URL에 대한 MIME 유형 을 지정 합니다.<br>
+				사용자 에이전트가 지정된 유형을 지원하지 않으면 srcset 요소를 건너 뜁니다.
+			</p>
+			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.8.picture_element_type.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+		</article>
+
+		<article class="indent_max txt_ex mt_l">
+			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;source srcset="URL"&gt;</span></h3>
+			<p class="mt_s">
+				브라우저가 크기에 따라 사용할 수있는 이미지를 나타냅니다.<br>
+				높은 DPI의 스크린의 고해상도 영상을 제공하기 위해 사용.
+			</p>
+			<div class="view_editor ex_code mt_s" data-target="html/06-embedded/6.8.picture_element_srcset.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.7.track_element.html">
-		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+	<section class="view_editor ex_code mt_l" data-target="html/06-embedded/6.8.picture_element.html">
+		<h3 class="ve_tit">코드 예제</h3>
+		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="track">
+	<aside class="browser_support mt_l" data-tit="picture">
 		<ul>
-			<li class="ie">10+</li>
-			<li class="edge">지원</li>
-			<li class="chrome">23.0</li>
-			<li class="firefox">31.0</li>
-			<li class="opera">12.1</li>
-			<li class="safari">6.0</li>
+			<li class="ie">지원안함</li>
+			<li class="edge">13.0</li>
+			<li class="chrome">38.0</li>
+			<li class="firefox">38.0</li>
+			<li class="opera">25.0</li>
+			<li class="safari">9.1</li>
 		</ul>
 	</aside>
 
