--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -9,17 +9,17 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			이미지를 삽입. (&lt;img&gt;의 srcset, sizes로 대체 가능)<br>
-			<code>&lt;picture&gt;</code> 요소는 &lt;img&gt; 요소의 다중 이미지 리소스(multiple image resources)를 위한 컨테이너를 정의할 때 사용합니다.<br>
-			&lt;picture&gt; 요소는 뷰포트(viewport)의 너비에 따라 커지거나 작아지는 하나의 이미지를 사용하는 대신 서로 다른 디스플레이나 기기에서 해당 뷰포트에 알맞게 채워질 수 있도록 여러 개의 이미지 중에서 적절한 이미지를 사용할 수 있도록 해줍니다. 이러한 요소는 웹 개발자가 이미지의 리소스를 보다 유연하게 지정할 수 있도록 해주므로, 반응형 디자인(responsive design)에서 주로 사용합니다.<br>
-			&lt;picture&gt; 요소는 0개 이상의 &lt;source&gt; 요소와 하나의 &lt;img&gt; 요소로 구성되며, 브라우저는 &lt;source&gt; 요소 중에서 해당 뷰포트와 가장 잘 어울리는 &lt;source&gt; 요소를 다음과 같은 방법을 사용하여 선택합니다.<br>
+			<code>&lt;picture&gt;</code> 요소는 <code>&lt;img&gt;</code> 요소의 다중 이미지 리소스(multiple image resources)를 위한 컨테이너를 정의할 때 사용합니다.<br>
+			<code>&lt;picture&gt;</code> 요소는 뷰포트(viewport)의 너비에 따라 커지거나 작아지는 하나의 이미지를 사용하는 대신 서로 다른 디스플레이나 기기에서 해당 뷰포트에 알맞게 채워질 수 있도록 여러 개의 이미지 중에서 적절한 이미지를 사용할 수 있도록 해줍니다. 이러한 요소는 웹 개발자가 이미지의 리소스를 보다 유연하게 지정할 수 있도록 해주므로, 반응형 디자인(responsive design)에서 주로 사용합니다.<br>
+			<code>&lt;picture&gt;</code> 요소는 0개 이상의 <code>&lt;source&gt;</code> 요소와 하나의 <code>&lt;img&gt;</code> 요소로 구성되며, 브라우저는 <code>&lt;source&gt;</code> 요소 중에서 해당 뷰포트와 가장 잘 어울리는 <code>&lt;source&gt;</code> 요소를 다음과 같은 방법을 사용하여 선택합니다.<br>
 		</p>
 		<p class="mt_s">
-			브라우저는 &lt;source&gt; 요소들의 속성값을 각각 확인해 나가며 조건을 만족하는 첫 번째 &lt;source&gt; 요소를 사용하고, 나머지 &lt;source&gt; 요소들은 무시합니다.<br>
-			이 때 &lt;img&gt; 요소는 &lt;picture&gt; 요소의 자식 요소 중에서 가장 마지막에 위치해야 합니다.<br>
-			이러한 &lt;img&gt; 요소는 &lt;picture&gt; 요소를 지원하지 않는 브라우저를 위한 하위 호환성(backward compatibility)을 위해 사용되거나 명시된 &lt;source&gt;요소가 모두 조건을 만족하지 못 할 경우 사용됩니다.<br>
+			브라우저는 <code>&lt;source&gt;</code> 요소들의 속성값을 각각 확인해 나가며 조건을 만족하는 첫 번째 <code>&lt;source&gt;</code> 요소를 사용하고, 나머지 <code>&lt;source&gt;</code> 요소들은 무시합니다.<br>
+			이 때 <code>&lt;img&gt;</code> 요소는 <code>&lt;picture&gt;</code> 요소의 자식 요소 중에서 가장 마지막에 위치해야 합니다.<br>
+			이러한 <code>&lt;img&gt;</code> 요소는 <code>&lt;picture&gt;</code> 요소를 지원하지 않는 브라우저를 위한 하위 호환성(backward compatibility)을 위해 사용되거나 명시된 <code>&lt;source&gt;</code>요소가 모두 조건을 만족하지 못 할 경우 사용됩니다.<br>
 		</p>
 		<p class="mt_s">
-			&lt;picture&gt; 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
+			<code>&lt;picture&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
 			<mark>Internet Explorer : No support(지원하지 않음)</mark>
 		</p>
 	</section>
