- 표 데이터 1차 완료

--- a/assets/01-html/07-edits/01-del_element.html
+++ b/assets/01-html/07-edits/01-del_element.html
@@ -41,7 +41,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/07-edits/7.1.del_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="default" data-browser="default">
+		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
