--- a/assets/guide.html
+++ b/assets/guide.html
@@ -157,6 +157,11 @@
 				<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">W3C 전역속성</a></li>
 			</ul>
 		</article>
+
+		<figure class="img_figure mt_l">
+			<img src="/assets/lib/img/html/img_html_tag_structure.png" alt="html 요소 설명">
+			<figcaption>[HTML 요소의 부분 설명]</figcaption>
+		</figure>
 	</div>
 </div><!-- //wrap -->
 
