--- a/assets/01-html/08-table/01-table_element.html
+++ b/assets/01-html/08-table/01-table_element.html
@@ -31,7 +31,7 @@
 				<p><b>rules</b> - CSS 속성값으로 사용</p>
 				<p><b>width</b> - CSS 속성값으로 사용</p>
 			</li>
-			<li class="line_code font14">
+			<li class="line_code font14 mt_s">
 				<strong>
 					summary - 더 이상 사용되지 않지만 다음과 같이 대체 가능<br>
 					테이블을 표시 할 수없는 테이블을 설명하기위한 대체 텍스트 사용을 정의합니다.<br>
