- 에디터 테스트

--- a/assets/01-html/09-forms/03-input_element.html
+++ b/assets/01-html/09-forms/03-input_element.html
@@ -170,6 +170,53 @@
 							<p class="safari">지원</p>
 						</aside>
 					</li>
+
+					<li class="font14 mt_m t_black">
+						<div>
+							<strong class="t_black">reset</strong> : <span class="t_blue">&lt;input type="reset"&gt;</span>
+						</div>
+						<p class="mt_sm">
+							리셋 버튼(reset button)을 정의함.<br>
+							모든 양식 필드가 기본값으로 다시 설정됩니다. 경우에 따라 양식 설정에 따라 필드가 지워집니다.
+						</p>
+						<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.3.input_element_type-reset.html">
+							<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+								<div class="code_wrap"><textarea></textarea></div>
+							</div>
+						</div>
+						<aside class="browser_support mt_s" data-tit="type : reset">
+							<p class="ie">지원</p>
+							<p class="edge">지원</p>
+							<p class="chrome">지원</p>
+							<p class="firefox">지원</p>
+							<p class="opera">지원</p>
+							<p class="safari">지원</p>
+						</aside>
+					</li>
+
+					<li class="font14 mt_m t_black">
+						<div>
+							<strong class="t_black">submit</strong> : <span class="t_blue">&lt;input type="submit"&gt;</span>
+						</div>
+						<p class="mt_sm">
+							제출 버튼(submit button)을 정의함.<br>
+							서버의 폼 핸들러(form handler)로 폼 데이터(form date)를 전송하는 제출 버튼(submit button)을 정의합니다.<br>
+							폼 핸들러는 일반적으로 입력된 데이터를 처리하는 스크립트를 포함하고 있는 서버 페이지이며, 이러한 폼 핸들러의 주소는 <code>&lt;form&gt;</code> 요소의 action 속성에 명시됩니다.
+						</p>
+						<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.3.input_element_type-submit.html">
+							<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+								<div class="code_wrap"><textarea></textarea></div>
+							</div>
+						</div>
+						<aside class="browser_support mt_s" data-tit="type : submit">
+							<p class="ie">지원</p>
+							<p class="edge">지원</p>
+							<p class="chrome">지원</p>
+							<p class="firefox">지원</p>
+							<p class="opera">지원</p>
+							<p class="safari">지원</p>
+						</aside>
+					</li>
 				</ol>
 			</div>
 
