--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -239,7 +239,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="td">
+	<aside class="browser_support mt_l" data-tit="form">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
