--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-button.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-button.html
@@ -1,7 +1,15 @@
-<form action="/examples/media/action_target.php" method="get">
-	<input type="button" value="클릭하세요!" onclick="popmsg()">
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="button"</title>
+	</head>
+	<body>
+		<form>
+			<input type="button" value="클릭하세요!" onclick="popmsg()">
+		</form>
 
-<script>
-	function popmsg() { alert("자바스크립트가 실행되었습니다!"); }
-</script>
+		<script>
+			function popmsg() { alert("자바스크립트가 실행되었습니다!"); }
+		</script>
+	</body>
+</html>
