--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-checkbox.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-checkbox.html
@@ -1,11 +1,19 @@
-<input type="checkbox" id="checkBox" name="checkBox">
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="checkbox"</title>
+	</head>
+	<body>
+		<input type="checkbox" id="checkBox" name="checkBox">
 
-<form>
-	<h3>Checked Checkboxes</h3>
-	<input type="checkbox" name="chcbox1" />
-	Bike
-	<input type="checkbox" name="chcbox1" checked/>
-	Car
-	<input type="checkbox" name="chcbox1" checked/>
-	Heavy vehicle
-</form>
+		<form>
+			<h3>Checked Checkboxes</h3>
+			<input type="checkbox" name="chcbox1" />
+			Bike
+			<input type="checkbox" name="chcbox1" checked/>
+			Car
+			<input type="checkbox" name="chcbox1" checked/>
+			Heavy vehicle
+		</form>
+	</body>
+</html>
