--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-color.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-color.html
@@ -1,7 +1,14 @@
-<form action="/examples/media/action_target.php" method="get">
-	<label>
-		여러분이 가장 좋아하는 색깔을 골라보세요.<br>
-		<input type="color" name="mycolor" value="#00ff00">
-	</label>
-	<input type="submit">
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="color"</title>
+	</head>
+	<body>
+		<form>
+			<label>
+				여러분이 가장 좋아하는 색깔을 골라보세요.<br>
+				<input type="color" name="mycolor" value="#00ff00">
+			</label>
+		</form>
+	</body>
+</html>
