--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-number.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-number.html
@@ -1,6 +1,13 @@
-<form action="/examples/media/action_target.php" method="get">
-	<label>
-		1부터 20까지의 짝수 : <input type="number" name="even" min="2" max="20" step="2">
-	</label><br>
-	<input type="submit">
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="number"</title>
+	</head>
+	<body>
+		<form>
+			<label>
+				1부터 20까지의 짝수 : <input type="number" name="even" min="2" max="20" step="2">
+			</label><br>
+		</form>
+	</body>
+</html>
