--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-password.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-password.html
@@ -1,5 +1,12 @@
-<form action="myform.cgi">
-	<input type="password" name="password" id="password" maxlength="6">
-	<label for="password"> Type a fake password here</label>
-	<br><input type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="password"</title>
+	</head>
+	<body>
+		<form>
+			<input type="password" name="password" id="password" maxlength="6">
+			<label for="password"> Type a fake password here</label>
+		</form>
+	</body>
+</html>
