--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-reset.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-reset.html
@@ -1,5 +1,13 @@
-<form action="myform.cgi">
-	<input type="password" name="password" id="password" maxlength="6">
-	<label for="password"> Type a fake password here</label>
-	<br><input type="reset" value="Reset">
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="reset"</title>
+	</head>
+	<body>
+		<form>
+			<input type="password" name="password" id="password" maxlength="6">
+			<label for="password"> Type a fake password here</label>
+			<br><input type="reset" value="Reset">
+		</form>
+	</body>
+</html>
