--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-file.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-file.html
@@ -1,5 +1,13 @@
-<form action="myform.cgi">
-	<input type="file" name="fileupload" value="fileupload" id="fileupload">
-	<label for="fileupload"> Select a file to upload</label>
-	<input type="submit" value="submit">
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="file"</title>
+	</head>
+	<body>
+		<form>
+			<input type="file" name="fileupload" value="fileupload" id="fileupload">
+			<label for="fileupload"> Select a file to upload</label>
+		</form>
+	</body>
+</html>
+
