--- a/ukncs/tutorials/html/09-forms/9.3.input_element_type-text.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_type-text.html
@@ -1,9 +1,12 @@
-<form>
-	<div>
-		<label for="uname">Choose a username: </label>
-		<input type="text" id="uname" name="name">
-	</div>
-	<div>
-		<button>Submit</button>
-	</div>
-</form>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>input_element type="text"</title>
+	</head>
+	<body>
+		<form>
+			<label for="uname">Choose a username: </label>
+			<input type="text" id="uname" name="name">
+		</form>
+	</body>
+</html>
