--- a/assets/01-html/09-forms/07-option_element.html
+++ b/assets/01-html/09-forms/07-option_element.html
@@ -85,7 +85,7 @@
 
 	<aside class="browser_support mt_lm" data-tit="option">
 		<ul>
-			<li class="ie false">지원안함</li>
+			<li class="ie">지원</li>
 			<li class="edge">지원</li>
 			<li class="chrome">1.0</li>
 			<li class="firefox">1.0</li>
