--- a/ukncs/uxkm-ncs.html
+++ b/ukncs/uxkm-ncs.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<nav class="uk-skip">
-		<a href="#cTitle">본문내용으로 건너띄기</a>
+		<a href="#cTitle">본문내용으로 건너뛰기</a>
 	</nav>
 	<header class="ukheader">
 		<h1 class="uklogo">UXKM</h1>
@@ -49,7 +49,7 @@
 
 			<hr title="Separator for Contents">
 
-			<h3 id="bookmark-link">참조 사이트</h3>
+			<h3 id="bookmark-link">참조 사이트 -1</h3>
 			<section class="uksection">
 				<blockquote class="note" role="note">
 					<p>
