--- a/ukncs/uxkm-html.html
+++ b/ukncs/uxkm-html.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<nav class="uk-skip">
-		<a href="#cTitle">본문내용으로 건너띄기</a>
+		<a href="#cTitle">본문내용으로 건너뛰기</a>
 	</nav>
 	<header class="ukheader">
 		<h1 class="uklogo">UXKM</h1>
