--- a/assets/lib/inc/uk_header.html
+++ b/assets/lib/inc/uk_header.html
@@ -60,7 +60,7 @@
 <div class="wrap">
 
 	<nav class="uk-skip">
-		<a href="#content">본문내용으로 건너띄기</a>
+		<a href="#content">본문내용으로 건너뛰기</a>
 	</nav>
 	<!-- //uk-skip -->
 
