--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -14,13 +14,13 @@
 		<h2 class="sound_only">HTML 요소 설명</h2>
 		<ol>
 			<li>
-				시작태그: 이것은 요소의 이름으로 구성되고 (여기에서는 p), 여닫는 꺾쇠괄호로 감싸집니다.<br>
+				시작태그: 이것은 요소의 이름으로 구성되고 (여기에서는 p), 여닫는 꺾쇠 괄호('&gt;', '&lt;')로 감싸집니다.<br>
 				이것은 요소가 시작되는 곳, 또는 효과를 시작하는 곳임을 나타냅니다.<br>
 				위 이미지 예제에서는 문단이 시작되는 위치를 나타냅니다.<br>
-				속성명과 속성값을 표기 할 수 있습니다.
+				속성명과 속성값을 표기할 수 있습니다.
 			</li>
 			<li>
-				종료태그: 이것은 여는 태그와 같지만, 요소의 이름 앞에 전방향 슬래시가 포함된다는 점이 다릅니다.<br>
+				종료태그: 이것은 여는 태그와 같지만, 요소의 이름 앞에 전방향 슬래시('/')가 포함된다는 점이 다릅니다.<br>
 				이것은 요소의 끝을 나타냅니다.<br>
 				위 이미지 예제에서는 문단이 끝나는 위치를 나타냅니다.<br>
 				초보자가 가장 흔히 범하는 오류 중 하나가 닫는 태그를 쓰지 않는 것으로 마크업 구조의 표준에 어긋나게 됩니다.
@@ -34,7 +34,7 @@
 		<h2>1.3.1 전역 속성(Global Attributes)</h2>
 		<p>
 			모든 HTML 요소에서 공통적으로 사용 가능한 속성.<br>
-			[attribute]에는 전역속성 (Global Attributes), 이벤트속성 (Event Attributes), 요소별 사용되는 속성으로 구분될 수 있음.<br>
+			[attribute]에는 전역속성(Global Attributes), 이벤트속성(Event Attributes), 요소별 사용되는 속성으로 구분될 수 있음.<br>
 			아래 열거된 내용 외에 더 많은 속성이 있음.<br>
 			<span class="reference">참조 : <a href="https://www.w3.org/TR/html51/dom.html#global-attributes" target="_blank" title="새창열림" class="fas">W3C 전역속성</a></span>
 		</p>
@@ -42,10 +42,10 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[class] <span class="t_blue">&lt;element class=&quot;name&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				class global 속성 은 요소 클래스의 공백으로 구분 된 목록입니다.<br>
-				한 페이지내에서 같은 name을 사용할 수 있으며, 한 요소에 여러 name을 지정할 수 있음.<br>
-				첫 name은 숫자,대문자,특수문자로 시작해서는 안됨.(ex. class="2name", class="Name", class="+name" 등)<br>
-				항상 소문자로 시작하며, 특수문자는 _(언더스코어),-(하이픈)만 적용가능.(ex. class="btn", class="btn-list", class="btn_list" 등)<br>
+				class global속성은 요소 클래스의 공백으로 구분된 목록입니다.<br>
+				한 페이지 내에서 같은 name을 사용할 수 있으며, 한 요소에 여러 name을 지정할 수 있음.<br>
+				첫 name은 숫자, 대문자, 특수문자로 시작 불가.(ex. class="2name", class="Name", class="+name" 등)<br>
+				항상 소문자로 시작하며, 특수문자는 _(언더스코어), -(하이픈)만 적용가능.(ex. class="btn", class="btn-list", class="btn_list" 등)<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementsByClassName(), querySelectorAll(selector) 같은)를 통해서 요소를 선택하거나 접근.
 			</p>
 			<aside class="browser_support mt_s" data-tit="class">
@@ -64,8 +64,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[id] <span class="t_blue">&lt;element id=&quot;name&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				문서에서 고유한 식별자(idenifier, ID)를 정의.<br>
-				한 페이지내에서 유일한 name을 가지고 있어야 하며, 같은 name이 중복되어서는 안됨.<br>
+				문서에서 고유한 식별자(identifier, ID)를 정의.<br>
+				한 페이지내에서 유일한 name을 가지고 있어야 하며, 같은 name은 중복으로 사용 불가.<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementById(), Document.querySelector() 같은)를 통해서 요소를 선택하거나 접근.
 			</p>
 			<aside class="browser_support mt_s" data-tit="id">
@@ -85,7 +85,7 @@
 			<h3 class="ml_mn">[style] <span class="t_blue">&lt;element style=&quot;value&quot;&gt;</span></h3>
 			<p class="mt_sm">
 				요소에 적용할 CSS를 선언.<br>
-				인라이스타일 방식이며, CSS우선순위에서는 1순위에 해당한다.
+				인라인 스타일 방식이며, CSS우선순위에서는 1순위에 해당한다.
 			</p>
 			<aside class="browser_support mt_s" data-tit="style">
 				<ul>
@@ -141,7 +141,7 @@
 			<h3 class="ml_mn">[data-*] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element data-global=&quot;text&quot;&gt;</span></h3>
 			<p class="mt_sm">
 				(data-custom-data-attributes)속성은 사용자 정의 데이터 속성을 지정.<br>
-				현재 많이 사용하는 방법이며 활용성면에서도 우수함.<br>
+				현재 많이 사용하는 방법이며 활용성 면에서도 우수함.<br>
 				HTML에 JavaScript에서 이용할 수 있는 데이터(정보)를 저장하는 용도로 사용.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.data-global.html">
@@ -195,8 +195,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[hidden] <span class="t_blue">&lt;element hidden&gt;</span></h3>
 			<p class="mt_sm">
-				기본적으로 hidden 속성은 boolean attribute(블리언 속성) 입니다.<br>
-				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.<br>
+				기본적으로 hidden 속성은 boolean attribute(불리언 속성)입니다.<br>
+				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false값을 가지게 되며, 명시하면 자동으로 true값을 가지게 됩니다.<br>
 				해당요소를 숨김(CSS 기본값 : display:none;).
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.hidden.html">
@@ -223,7 +223,7 @@
 				Tab키를 이용해 요소를 순차적으로 포커스 탐색할 순서를 지정.<br>
 				필요한 경우에만 사용하고 습관적으로 사용하면 안됨.<br>
 				대화형 콘텐츠(Interactive Content)는 기본적으로 코드 순서대로 탭 순서가 지정됨.<br>
-				비대화형 콘텐츠에 tabindex="0"을 지정하여 대화형 콘텐츠와 같이 탭 순서를 사용.<br>
+				비 대화형 콘텐츠에 tabindex="0"을 지정하여 대화형 콘텐츠와 같이 탭 순서를 사용.<br>
 				tabindex="-1"을 통해 포커스는 가능하지만 탭 순서에서 제외 가능.<br>
 				tabindex="1" 이상의 양수 값은 논리적 흐름을 방해하기 때문에 사용을 추천하지 않음.
 			</p>
@@ -248,12 +248,12 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[contenteditable] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element contenteditable=&quot;true&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				사용자가 요소를 편집 할 수 있는지 여부를 나타내는 열거형 속성입니다.<br>
+				사용자가 요소를 편집할 수 있는지 여부를 나타내는 열거형 속성입니다.<br>
 				이 경우 브라우저는 위젯을 수정하여 편집을 허용하도록 합니다.<br>
 				속성값은 다음 값 중 하나이어야 합니다.<br><br>
 
 				true 혹은 빈 문자열 : 요소를 편집 가능하도록 지정합니다.<br>
-				false, 요소를 편집 할 수 없도록 지정합니다.<br>
+				false, 요소를 편집할 수 없도록 지정합니다.<br>
 				이 속성을 설정하지 않으면 기본값은 상위 요소에서 상속됩니다.<br><br>
 
 				이 속성은 Boolean 속성이 아니라 열거형 속성입니다.<br>
@@ -283,7 +283,7 @@
 			<h3 class="ml_mn">[dir] <span class="t_blue">&lt;element dir=&quot;ltr | rtl | auto&quot;&gt;</span></h3>
 			<p class="mt_sm">
 				열거형 속성으로 요소의 텍스트에 대한 방향성을 나타냅니다. 이 속성은 다음과 같은 값을 가질 수 있습니다.<br>
-				dir 속성은 (base, br, frame, frameset, hr, iframe, param, script) 태그에서는 유효하지 않습니다.
+				dir 속성은 (base, br, frame, frameset, hr, iframe, param, script)태그에서는 유효하지 않습니다.
 			</p>
 			<div class="ol_lst indent mt_sm">
 				<ol>
@@ -304,10 +304,10 @@
 			<p class="mt_sm">
 				이 속성은 의미적으로 다른 뜻을 가지는 <code>&lt;bdo&gt;</code> 요소에 필수 속성입니다.<br>
 				이 속성은 <code>&lt;bdi&gt;</code> 요소의 속성을 상속하지 않습니다. 따로 설정되지 않으면 그 값은 auto입니다.<br>
-				CSS 페이지가 활성화되고 해당 요소가 CSS 속성인 direction와 unicode-bidi을 지원하는 경우, 이들 속성에 의해 오버라이드될 수 있습니다.<br>
+				CSS 페이지가 활성화되고 해당 요소가 CSS 속성인 direction와 unicode-bidi을 지원하는 경우, 이들 속성에 의해 오버라이드 될 수 있습니다.<br>
 				텍스트의 방향은 내용과 의미적으로 관련되고 표시 방식과는 관련이 없으므로 웹 개발자는 가능한 관련 CSS속성 대신 이 속성을 사용하는 것이 좋습니다.<br>
 				이렇게 하면 CSS를 지원하지 않거나 CSS가 비활성화된 브라우저에서도 텍스트가 올바르게 표시됩니다.<br>
-				auto 값은 사용자 입력 데이터와 같이 데이터의 방향성을 모르며 최종적으로 데이터베이스에 저장되는 데이터일 경우에만 사용되어야 합니다.
+				auto값은 사용자 입력 데이터와 같이 데이터의 방향성을 모르며, 최종적으로 데이터베이스에 저장되는 데이터일 경우에만 사용되어야 합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.dir.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
