--- a/assets/01-html/02-blockInline/01-block_element.html
+++ b/assets/01-html/02-blockInline/01-block_element.html
@@ -14,15 +14,15 @@
 
 	<section class="ol_lst">
 		<h2 class="sound_only">요소 설명</h2>
-		<p class="mt_l">display 속성값이 블록(block)인 요소는 언제나 새로운 라인(line)에서 시작하며, 해당 라인의 모든 너비를 차지합니다.</p>
+		<p class="mt_l">display 속성값이 블록(block)인 요소는 언제나 새로운 라인(line)에서 시작하며, 값을 지정해주지 않는 이상 해당 라인의 모든 너비(width)를 차지합니다.</p>
 		<ol class="indent mt_sm">
 			<li>블록 레벨 요소(Block-level elements) 는 웹페이지 상에 블록(Block)을 만드는 요소입니다.</li>
-			<li>블록 레벨 요소는 앞뒤 요소 사이에 새로운 줄(Line)을 만들고 나타납니다. 즉 블록 레벨 요소 이전과 이후 요소사이의 줄을 바꿉니다.</li>
+			<li>블록 레벨 요소는 앞뒤 요소 사이에 새로운 줄(line)을 만들고 나타납니다. 즉, 블록 레벨 요소 이전과 이후 요소 사이의 줄을 바꿉니다.</li>
 			<li>
 				블록 레벨 요소는 일반적으로 페이지의 구조적 요소를 나타낼 때 사용됩니다.
 				예를 들어 개발자는 블록 레벨 요소를 사용하여 단락(Paragraphs), 목록(lists), 네비게이션 메뉴(Navigation Menus), 꼬리말(Footers) 등을 표현할 수 있습니다.
 			</li>
-			<li>블록 레벨 요소는 인라인 요소(Inline elements)에 중첩될(Nested inside)수 없습니다. 그러나 블록 레벨 요소는 다른 블록 레벨 요소에 중첩될 수 있습니다.</li>
+			<li>블록 레벨 요소는 인라인 요소(Inline elements) 안에 포함될(Nested inside)수 없습니다. 그러나 블록 레벨 요소는 다른 블록 레벨 요소 내부에 포함될 수 있습니다.</li>
 		</ol>
 	</section>
 
