--- a/assets/01-html/03-sections/01-header_element.html
+++ b/assets/01-html/03-sections/01-header_element.html
@@ -8,8 +8,8 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;header&gt;</code> 요소는 소개나 탐색을 돕는것의 그룹을 나타냅니다.<br>
-			일부 제목 요소들을 포함할 수도 있지만, 로고나 그룹의 제목, 탐색 폼과 같은것들이 포함될 수도 있습니다.
+			<code>&lt;header&gt;</code> 요소는 소개나 탐색을 돕는 그룹을 나타냅니다.<br>
+			일부 제목 요소들을 포함할 수도 있지만, 로고나 그룹의 제목, 탐색 폼과 같은 것들이 포함될 수도 있습니다.
 		</p>
 	</section>
 
