--- a/assets/01-html/03-sections/06-footer_element.html
+++ b/assets/01-html/03-sections/06-footer_element.html
@@ -8,9 +8,9 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;footer&gt;</code> 는 가장 가까운 구조화 콘텐츠나 구조화 루트의 푸터를 나타냅니다.<br>
+			<code>&lt;footer&gt;</code>는 가장 가까운 구조화 콘텐츠나 구조화 루트의 하단 영역을 나타냅니다.<br>
 			푸터는 일반적으로 작성자, 저작권 데이터, 관련된 문서의 링크에 대한 정보를 포함합니다.<br>
-			<code>&lt;address&gt;</code> 요소에 들어 있는 작성자에 대한 정보도 <code>&lt;footer&gt;</code> 요소에 포함될수 있습니다.
+			<code>&lt;address&gt;</code> 요소에 들어 있는 작성자에 대한 정보도 <code>&lt;footer&gt;</code> 요소에 포함될 수 있습니다.
 		</p>
 	</section>
 
@@ -31,4 +31,3 @@
 			<li class="safari">4.1</li>
 		</ul>
 	</aside>
-
