--- a/assets/01-html/03-sections/08-hgroup_element.html
+++ b/assets/01-html/03-sections/08-hgroup_element.html
@@ -8,9 +8,9 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;hgroup&gt;</code> 요소 (HTML 제목 그룹 요소) 는 제목의 구조를 나타냅니다.<br>
+			<code>&lt;hgroup&gt;</code> 요소 (HTML 제목 그룹 요소)는 제목의 구조를 나타냅니다.<br>
 			자신이 속한 암시적이거나 명백한 구조의 주제로서 문서의 개요 안에 있는 하나의 제목을 말합니다.<br>
-			<code>&lt;hgroup&gt;</code> 요소가 완성되기 전에 HTML로 HTML W3C 스펙으로부터 제거되었지만 아직 WHATWG 명세서의 일부와 적어도 부분적으로 대부분의 브라우저에서 지원.
+			<code>&lt;hgroup&gt;</code> 요소가 완성되기 전에 HTML로 HTML W3C 스펙으로부터 제거되었지만 아직 WHATWG 명세서의 일부와 적어도 부분적으로 대부분의 브라우저에서 지원합니다.
 		</p>
 	</section>
 
