--- a/assets/01-html/03-sections/note.html
+++ b/assets/01-html/03-sections/note.html
@@ -2,7 +2,7 @@
 <div class="uk_note" role="note">
 	<h2 class="sound_only">요약 설명</h2>
 	<ul>
-		<li>콘텐츠 구획화 요소는 문서 콘텐츠를 논리적인 구조로 체계화 시킬 수 있도록 해줍니다.</li>
+		<li>콘텐츠 구획화 요소는 문서 콘텐츠를 논리적인 구조로 체계화 할 수 있도록 해줍니다.</li>
 		<li>콘텐츠 구획화 요소를 사용해 웹 페이지 콘텐츠의 큰 틀을 잡고, header, footer, navigation, heading 등을 이용해 시멘틱 마크업을 합니다.</li>
 	</ul>
 </div>
